# nra-solver

./: .gitignore  LICENSE  Makefile  README.md  bad  dune-project  flake.nix  foo.sh  good  nra_solver.opam  nra_solver.opam.template  toto2.smt2  toto3.smt2  toto4.smt2  toto5.smt2  toto6.smt2  toto_sat1.smt2  toto_sat2.smt2  toto_sat3.smt2  toto_sat4.smt2  toto_sat5.smt2
.github/workflows/: main.yml
lib/: constraint.ml  constraint.mli  covering.ml  covering.mli  dune  nra_solver.ml  nra_solver.mli  polynomes.ml  polynomes.mli  real.ml  real.mli  vect.ml  vect.mli  z_poly.ml  z_poly.mli
test/: dune  example.smt2  runtest.sh  test.smt2  test_nra.ml
test/sat/: Triangle-Bottema1_3.smt2  gen-03.smt2  gen-04.smt2  gen-05.smt2  gen-06.smt2  gen-07.smt2  gen-08.smt2  gen-10.smt2  gen-16.smt2  gen-18.smt2  gen-19.smt2  kissing_2_2.smt2  kissing_2_3.smt2  kissing_3_2.smt2  kissing_3_4.smt2  kissing_3_6.smt2  kissing_4_2.smt2  kissing_4_3.smt2  kissing_4_4.smt2  kissing_4_5.smt2  kissing_4_6.smt2  kissing_4_7.smt2  kissing_4_8.smt2  toto_sat.smt2
test/unsat/: ProveIneq_ISSAC05_Bessack_3_1.smt2  gen-13.smt2  gen-15.smt2  gen-17.smt2  kissing_2_7.smt2  mbo_E10.smt2  mbo_E11.smt2  mbo_E11E16.smt2  mbo_E11E21.smt2  mbo_E11E23.smt2  mbo_E11E26.smt2  mbo_E11E27.smt2  mbo_E16.smt2  mbo_E16E26.smt2  mbo_E17E23.smt2  mbo_E17E27.smt2  mbo_E20.smt2  mbo_E20E21.smt2  mbo_E20E27.smt2  mbo_E21.smt2  mbo_E21E23.smt2  mbo_E21E26.smt2  mbo_E21E27.smt2  mbo_E21E28.smt2  mbo_E22E27.smt2  mbo_E23.smt2  mbo_E23E26.smt2  mbo_E23E28.smt2  mbo_E24.smt2  mbo_E25.smt2  mbo_E25E26.smt2  mbo_E26.smt2  (+12 more)
